--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -6,8 +6,8 @@
         $mapCategories = $modelCategories->fetchCatNames();
 
         $mapFields = array('project_category_id' => 'Category', 'tags' => 'Tags', 'package_names' => 'Package', 'arch_names' => 'Architecture', 'license_names' => 'License', 'laplace_score' => 'Score');
-        $mapUrlIdent = array('project_category_id' => 'pci', 'tags' => 't', 'laplace_score' => 'ls', 'package_names' =>'pkg','arch_names' =>'arch','license_names' =>'lic');
-        $mapCurrentParam = array('project_category_id' => $this->pci, 'tags' => $this->t, 'laplace_score' => $this->ls,'package_names' => $this->pkg,'arch_names' => $this->arch,'license_names' => $this->lic);
+        $mapUrlIdent = array('project_category_id' => 'pci', 'tags' => 't', 'package_names' =>'pkg','arch_names' =>'arch','license_names' =>'lic', 'laplace_score' => 'ls');
+        $mapCurrentParam = array('project_category_id' => $this->pci, 'tags' => $this->t,'package_names' => $this->pkg,'arch_names' => $this->arch,'license_names' => $this->lic, 'laplace_score' => $this->ls);
 
         $currentCat = $this->pci;
         $currentScore = $this->ls;
@@ -15,59 +15,9 @@
         $currentPkg = $this->pkg;
         $currentArch = $this->arch;
         $currentLic= $this->lic;
-
-        /**
-        $urlCatPart = $this->pci ? array('pci'=>$this->pci) : array();
-        $urlScorePart = $this->ls ? array('ls'=>$this->ls) : array();
-        */
         
-        $hasTagField = isset($this->searchField) AND $this->searchField == 'tags' ? true : false;
-        $hasPkgField = isset($this->searchField) AND $this->searchField == 'package_names' ? true : false;
-        $hasArchField = isset($this->searchField) AND $this->searchField == 'arch_names' ? true : false;
-        $hasLicField = isset($this->searchField) AND $this->searchField == 'license_names' ? true : false;
-
         ?>
-    <style>
-        .refine-search-group > ul.dropdown-menu {
-            min-width: 100%;
-        }
-        .refine-search-group > button {
-            text-align: left;
-            min-width: 100%;
-            background-color: #fff;
-            border-color: #ccc;
-            color: #333;
-        }
-        .refine-search-group button span.caret {
-            position: absolute;
-            top: 20px;
-            right: 15px;
-        }
-        .refine-search-group .dropdown-menu > li > a > span.badge {
-            font-weight: normal;
-            font-size: smaller;
-            position: absolute;
-            top: 3px;
-            right: 3px;
-        }
-        .refine-search-group .dropdown-menu > li > a {
-            position: relative;
-            padding: 3px 10px;
-        }
-        .refine-search-group .no-tags-msg {
-            padding-left: 10px;
-        }
-        .refine-search-header .btn-xs {
-            font-size: 12px;
-            line-height: 1.5;
-            padding: 1px 5px;
-        }
-        .refine-search-header .current-search {
-            padding-left: 2px;
-            padding-right: 2px;
-            padding-bottom: 1px;
-        }
-    </style>
+    
 <div class="panel-group">
     <div class="panel panel-default refine-search-header">
         <h4 style="font-weight: 600;padding:10px 15px;">Choose Filter:</h4>
@@ -117,110 +67,22 @@
          <div class="dropdown refine-search-group">
             <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><?=$mapFields[$field_name]?> <span class="caret"></span></button>
             <ul class="dropdown-menu">
-            <?php
-                switch ($mapFields[$field_name]) {                    
-                    case 'Category' : ?>
-                        <?php foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $currentCat) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pci' => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pci'=>$key))?>">
-                                   <?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span></a>
-                                </li>
-                            <?php endif; ?>
-                            <?php } ?>
-                    <?php break;
-                    case 'Tags' : ?>
-                        <?php if (count((array)$facet_field) == 0) :?>
-                            <li><span class="no-tags-msg"> no tags found </span></li>
-                        <?php endif; ?>
-                        <?php $searchTextForTags = $hasTagField ? $currentTag : $this->searchText;
-                            foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
-                                        <?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php endif; ?>
-                            <?php } ?>
-                        <?php break;                  
+                <?php if (count((array)$facet_field) == 0) :?>
+                        <li><span class="no-tags-msg"> no <?=$mapFields[$field_name]?> found </span></li>
+                    <?php endif; ?>
+                <?php 
+                    foreach ($facet_field as $key =>$count) { ?>
+                    <?php if ($key == $mapCurrentParam[$field_name]) : ?>
+                        <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
+                            </a></li>
+                    <?php else : ?>
+                        <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                <?= ($mapFields[$field_name]=='Category' ?$mapCategories[intval($key)]:$key)?> <span class="badge"><?=$count?></span>
+                            </a></li>
+                    <?php endif; ?>
+                    <?php } ?>                
 
-                    case 'Package' : ?>
-                        <?php if (count((array)$facet_field) == 0) :?>
-                            <li><span class="no-tags-msg"> no Package found </span></li>
-                        <?php endif; ?>
-                        <?php $searchTextForTags = $hasPkgField ? $currentPkg : $this->searchText;
-                            foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
-                                        <?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php endif; ?>
-                            <?php } ?>
-                        <?php break;      
-
-                    case 'Architecture' : ?>
-                        <?php if (count((array)$facet_field) == 0) :?>
-                            <li><span class="no-tags-msg"> no Architecture found </span></li>
-                        <?php endif; ?>
-                        <?php $searchTextForTags = $hasArchField ? $currentArch : $this->searchText;
-                            foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
-                                        <?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php endif; ?>
-                            <?php } ?>
-                        <?php break;    
-
-                    case 'License' : ?>
-                        <?php if (count((array)$facet_field) == 0) :?>
-                            <li><span class="no-tags-msg"> no License found </span></li>
-                        <?php endif; ?>
-                        <?php $searchTextForTags = $hasLicField ? $currentLic : $this->searchText;
-                            foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
-                                        <?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php endif; ?>
-                            <?php } ?>
-                        <?php break;    
-
-                    case 'Score' : ?>
-                        <?php if (count((array)$facet_field) == 0) :?>
-                            <li><span class="no-tags-msg"> no tags found </span></li>
-                        <?php endif; ?>
-                        <?php foreach ($facet_field as $key =>$count) { ?>
-                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
-                                        <?= $key?> <span class="badge"><?=$count?></span>
-                                    </a></li>
-                            <?php endif; ?>
-                            <?php } ?>
-                        <?php break;
-                        } ?>
             </ul>
          </div>
         </div>
@@ -235,11 +97,11 @@
         <ul class="dropdown-menu">
         <?php foreach ($facet_field->counts as $key =>$count) { ?>
                 <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="active">
+                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'ls' => null))?>" class="active">
                     <span class="glyphicon glyphicon-remove text-danger pull-left" aria-hidden="true" style="margin-right: 2px;top:3px;color:white;"></span><?=intval($key)?><span class="badge"><?=$count?></span>
                 </a></li>
                 <?php else :?>
-                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' =>intval($key)))?>" >
+                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'ls' =>intval($key)))?>" >
                     <?=intval($key)?><span class="badge"><?=$count?></span>
                 </a></li>
                 <?php endif; ?>
