--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -69,53 +69,53 @@
 <div id="TableContainer"></div>
 
 <div id="dialog-form" title="Create new Subcategory">
-    <p class="validateTips">All form fields are required.</p>
+    <p class="validateTips">Form fields with * are required.</p>
 
     <form id="add-subcat-form" class="jtable-dialog-form jtable-create-form">
         <div class="jtable-input-field-container">
-            <div class="jtable-input-label">Title</div>
+            <div class="jtable-input-label">Title*</div>
             <div class="jtable-input jtable-textarea-input">
-                <input class="validate[required]" id="subcat-title" name="title"/>
+                <input id="subcat-title" name="title" class="validate[required]" />
             </div>
         </div>
         <div class="jtable-input-field-container">
             <div class="jtable-input-label">XDG-Type</div>
             <div class="jtable-input jtable-text-input">
-                <input class="" id="subcat-xdg" name="xdg_type" type="text">
+                <input id="subcat-xdg" name="xdg_type" type="text">
             </div>
         </div>
         <div class="jtable-input-field-container">
             <div class="jtable-input-label">Legacy Name</div>
             <div class="jtable-input jtable-text-input">
-                <input class="" id="subcat-legacy" name="name_legacy" type="text">
+                <input id="subcat-legacy" name="name_legacy" type="text">
             </div>
         </div>
         <div class="jtable-input-field-container">
             <div class="jtable-input-label">Pling Factor</div>
             <div class="jtable-input jtable-text-input">
-                <input class="" id="dl_pling_factor" name="dl_pling_factor" type="text">
+                <input id="subcat-dl_pling_factor" name="dl_pling_factor" type="text" value="1">
             </div>
         </div>
         <div class="jtable-input-field-container">
-            <div class="jtable-input-label">Show Description</div>
+            <div class="jtable-input-label">Show Description*</div>
             <div class="jtable-input jtable-dropdown-input">
-                <select id="show_description" name="show_description" class="validate[required]">
+                <select id="subcat-show_description" name="show_description" class="validate[required]">
                     <option value="1">Show</option>
                     <option selected="selected" value="0">Don't show</option>
                 </select>
             </div>
         </div>
         <div class="jtable-input-field-container">
-            <div class="jtable-input-label">Source Required</div>
+            <div class="jtable-input-label">Source Required*</div>
             <div class="jtable-input jtable-dropdown-input">
-                <select id="show_description" name="show_description" class="validate[required]">
-                    <option value="1" value="0">Required</option>
-                    <option selected="selected">Not Required</option>
+                <select id="subcat-source_required" name="source_required" class="validate[required]">
+                    <option value="1">Required</option>
+                    <option selected="selected" value="0">Not Required</option>
                 </select>
             </div>
         </div>
         <div class="jtable-input-field-container">
-            <div class="jtable-input-label">Status</div>
+            <div class="jtable-input-label">Status*</div>
             <div class="jtable-input jtable-dropdown-input">
                 <select id="subcat-status" name="is_active" class="validate[required]">
                     <option selected="selected" value="1">Active</option>
@@ -221,7 +221,7 @@
             width: 350,
             modal: true,
             open: function (event, ui) {
-                $("#add-subcat-form").validationEngine('attach');
+                $("#add-subcat-form").trigger('reset').validationEngine('attach');
             },
             buttons: {
                 Cancel: function () {
@@ -245,10 +245,12 @@
                     $('#TableContainer').jtable('addRecord', {
                         record: {
                             "title": $("#subcat-title").val(),
-                            "is_active": $("#subcat-status").val(),
-                            "name_legacy": $("#subcat-legacy").val(),
                             "xdg_type": $("#subcat-xdg").val(),
-                            "dl_pling_factor": $("#dl_pling_factor").val(),
+                            "name_legacy": $("#subcat-legacy").val(),
+                            "dl_pling_factor": $("#subcat-dl_pling_factor").val(),
+                            "show_description": $("#subcat-show_description").val(),
+                            "source_required": $("#subcat-source_required").val(),
+                            "is_active": $("#subcat-status").val(),
                             "rgt": sendPostId
                         }
                     });
@@ -408,13 +410,14 @@
                 },
                 title: {
                     title: 'Title',
+                    inputTitle: 'Title*',
                     type: 'input',
                     list: false,
                     width: '30%',
                     inputClass: 'validate[required]'
                 },
                 title_show: {
-                    title: 'Title_Show',
+                    title: 'Text (indented according to hierarchy)',
                     type: 'textarea',
                     create: false,
                     edit: false,
@@ -443,26 +446,30 @@
                     width: '8%'
                 },
                 show_description: {
-                    title: 'Show Description',
+                    title: 'Description',
+                    inputTitle: 'Show Description*',
                     options: {'1': 'Show', '0': 'Do not show'},
                     defaultValue: '0',
                     width: '8%'
                 },
                 source_required: {
-                    title: 'Source Required',
+                    title: 'Source',
+                    inputTitle: 'Source Required*',
                     options: {'1': 'Required', '0': 'Not Required'},
                     defaultValue: '0',
                     width: '8%'
                 },
                 is_active: {
                     title: 'Status',
+                    inputTitle: 'Status*',
                     options: {'1': 'Active', '0': 'Inactive'},
                     defaultValue: '1',
                     width: '5%'
                 },
                 is_deleted: {
                     title: 'Deleted',
-                    options: {'0': '', '1': 'Deleted'},
+                    options: {'0': 'Not Deleted', '1': 'Deleted'},
+                    defaultValue: '0',
                     create: false,
                     width: '5%'
                 },
